--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -387,6 +387,8 @@ Error message and password prompt
 
 <li>Torrent</li>
 
+<li>Trouver les mots pour parler de sexualité à son ado</li>
+
 <li>Vaccins : zéro d’enquête sur France 3</li>
 
 <li>valeurs</li>
@@ -9344,7 +9346,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190906124533835" list="magic Home" modified="20190906132254891" title="$:/StoryList">
+<div created="20190918154309282" list="[[Quotes, citations]] Home" modified="20190918154309282" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9404,8 +9406,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190906132253401" title="$:/temp/search">
-<pre>magic</pre>
+<div created="20190114084246125" modified="20190918154308105" title="$:/temp/search">
+<pre>quote</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -10930,7 +10932,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20190906132039616" tags="magic current" title="magic">
+<div created="20190322143324937" modified="20190916142355760" tags="magic current" title="magic">
 <pre>! work: 
 * squeeze @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
 * himber count
@@ -10941,7 +10943,11 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 
 ! warez
 * ''http://www.magic22.com/''
-* ''https://vminhsang.name.vn/?p=1108''
+* https://vminhsang.name.vn/?p=1108
+* ''https://vminhsang.name.vn/?p=3518''
+* ''https://vminhsang.name.vn/?p=3487''
+* ''https://vminhsang.name.vn/?p=3491''
+* ''https://vminhsang.name.vn/?p=3499''
 * ''http://freemagicdownload1807.blogspot.com/''
 * ''https://www.reddit.com/r/Premium2FreeDownload/''
 * https://www.dailymotion.com/j1811178/videos?sort=visited
@@ -11617,8 +11623,19 @@ fnac =&gt; fnac.s.lemoine@xoxy.net 8/18
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
 * virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
 </div>
-<div created="20190529145620246" modified="20190906132000061" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20190919130939785" tags="quotes" title="Quotes, citations">
 <pre>
+&lt;&lt;&lt;
+You don't have a soul, you're a soul. You have a body.
+&lt;&lt;&lt;
+
+
+
+&lt;&lt;&lt;
+C'est par l'intuition que l'on trouve et c'est par la déduction que l'on prouve - Henri Poincaré
+&lt;&lt;&lt;
+
+
 &lt;&lt;&lt;
 Que tout esprit loue le seigneur - incantation d'auto-exorcisme
 &lt;&lt;&lt;
@@ -11761,6 +11778,12 @@ Par ailleurs, cette artificialisation de la vie, en particulier de la nature, co
   Le veut-on vraiment ? Le sait-on vraiment ? A quel moment décidera- t-on de conserver une part de notre humanité, et de l’authenticité des autres espèces ? A quel moment décidera-t-on d’enrayer le mécanisme suicidaire auquel nous conduit notre refus de penser à l’avenir ?
 
  Il est encore temps de choisir.
+&lt;&lt;&lt;
+
+
+! Ovadia Yosef
+&lt;&lt;&lt;
+Les goyims [non juifs] n'ont de place dans le monde que pour servir le peuple d'Israël. [...] Avec les gentils, ce sera comme toute personne, ils doivent mourir, mais [Dieu] leur donnera longévité. Pourquoi ? Imaginez que l'âne de quelqu'un meurt, ils perdraient leur argent. C'est son servant. C'est pourquoi il a une longue vie, pour bien travailler pour ce juif - Ovadia Yosef
 &lt;&lt;&lt;
 </pre>
 </div>
@@ -12287,6 +12310,49 @@ Pierre Kropotkine
 * Currency ﻿de ﻿﻿Ninh﻿
 * Five de Xeon Steel
 * Bill ﻿Breaker de ﻿﻿﻿Bizzaro</pre>
+</div>
+<div created="20190918122121519" modified="20190918122334220" tags="parenting" title="Trouver les mots pour parler de sexualité à son ado">
+<pre>La découverte de la sexualité est perçue, à tort ou à raison, comme le moment de tous les dangers par les parents. Maïa Mazaurette, chroniqueuse de « La Matinale », livre quelques pistes pour négocier ce cap délicat.
+
+https://www.lemonde.fr/m-perso/article/2019/09/15/comment-preparer-un-ado-a-son-premier-rapport_5510580_4497916.html
+
+La découverte de la sexualité ? Quelle misère ! Avec un autre être humain ? Sauve qui peut ! Si la période des premiers rapports est compliquée pour les adolescents, elle l’est aussi pour leurs parents, qui ont parfois l’impression d’incarner l’ultime contre-pouvoir face à des vecteurs problématiques d’éducation sexuelle : l’école (insuffisante), la pop culture (dénuée de vocation pédagogique), la pornographie (Satan), les camarades d’école (Belzébuth).
+
+Entre fantasmes et réalités, faits divers cauchemardesques et statistiques anxiogènes, nous percevons l’entrée en sexualité comme le moment de tous les dangers. Parfois à raison. Parfois à tort. En tout cas, en tant que parent ou adulte référent, il va falloir trouver sa place, trouver les mots... et retrousser ses manches.
+Commencer avant la puberté. Et recommencer
+
+1. Tout d’abord, recontextualisons : un premier rapport, c’est souvent un ensemble de premiers rapports, qui ne reposeront pas forcément sur la pénétration vaginale. La masturbation s’inscrit dans ce continuum, mais aussi le premier baiser, l’initiation à des pratiques alternatives, les pénétrations partielles, les ratés, les emballements, les fellations, cunnilingus, anulingus et 69. Parler de première fois au singulier, c’est non seulement limiter le champ des possibles, mais entrer dans une logique du « tout ou rien »... qui pousse les jeunes à rechercher « la totale ».
+
+2. Vos conversations, plurielles, auront évidemment lieu en amont de toute rencontre avec un partenaire « officiel » : votre adolescent peut avoir une relation secrète, un réseau polyamoureux, ou passer à l’acte spontanément parce que l’occasion se présente. Si l’âge médian d’entrée en sexualité est de 17 ans, cela signifie que la moitié des jeunes passent le cap avant – et qu’a priori, d’autres étapes de découverte de l’intimité auront déjà eu lieu. 14 % des garçons et 8 % des filles ont leur premier rapport avant 15 ans (HSBC 2014) – c’est notamment le cas des garçons qui ont deux foyers parentaux et qui sortent en soirée. Gardez également en tête que la sexualité précoce est valorisée, surtout pour les garçons.
+
+D’autre part, si vous comptez aborder ces questions avant le premier contact avec la pornographie... il va falloir commencer avant la puberté. Et recommencer. Et recommencer encore. Plus la conversation est naturelle et banale, plus votre enfant pourra se confier.
+
+Par ailleurs, et contrairement à ce que les clichés laissent supposer, ces conversations ne tombent pas forcément comme un cheveu sur la soupe (« maman, comment on fait les bébés et les fellations ? »). Les séries télé, la musique, Internet, fournissent quantité d’opportunités, mais aussi l’actualité. Rien qu’en début de semaine, Patrick Bruel a été accusé de comportement problématique avec une masseuse. L’homophobie dans le monde du football a fait polémique. L’opposition a contesté la procréation médicalement assistée (PMA). Paris a annoncé une chute de 16 % des cas de séropositivité. Autant d’occasions idéales pour aborder tel ou tel sujet.
+
+Eviter l’éducation genrée et la présomption d’hétérosexualité
+
+3. La sexualité des jeunes n’obéit pas à des lois thermodynamiques différentes propres à la planète Saturne. Il n’y a aucune raison que votre adolescent affronte un risque particulier... et à l’inverse, qu’il esquive miraculeusement les problèmes d’adulte (comme le viol conjugal, les coups, les substances ou les disparités économiques). Soit dit en passant, un peu d’humilité : l’expérience ne nous confère aucune science infuse face à des ados forcément insouciants, instables, en construction, ou carrément irresponsables.
+
+4. Attention à l’éducation genrée, qui met les filles sous surveillance et lâche les garçons dans la nature (non, les garçons ne vont pas « juste se débrouiller »). Dans le contexte actuel, les filles se retrouvent encore et toujours dans le rôle de la personne responsable, modérée, qui devra limiter les ardeurs de ses prétendants, éviter les violences, ne pas « chercher » ou se mettre en avant – autant d’inquiétudes qu’il est injuste de faire peser sur elles uniquement, et qui teintent leurs premières expériences d’anxiété.
+
+5. « Les jeunes » ne sont pas un groupe homogène aux cheveux gras. Et puisque vous n’êtes pas l’école, hourra, vous pouvez aborder des thématiques personnalisées, valables pour votre enfant unique et merveilleux – selon sa situation géographique, sa sensibilité religieuse, sa morphologie, sa couleur de peau, son caractère, sa situation économique (a-t-il ou elle accès à une chambre à soi, à des préservatifs, etc.).
+
+6. Votre enfant n’est pas forcément hétérosexuel, ni forcément à l’aise dans son genre. Ce type de questionnements individuels se paie suffisamment cher dans l’espace public pour que vous ne les rendiez pas invisibles une millième fois. Evitez donc toute présomption d’hétérosexualité, et toute présomption de normalité (la petite Julie peut parfaitement décider d’avoir son premier rapport avec Nedjma, alors même que vous la voyez embrasser Nico à la sortie des classes).
+
+7. Eduquez aux horizons les plus larges. Même un garçon donnant tous les gages d’une hétérosexualité pur jus devrait avoir une vague idée de comment les lesbiennes font l’amour (le porno ne l’aidera pas) : pour se coucher moins bête, parce qu’il a forcément des lesbiennes dans son entourage, pour qu’il puisse réagir en cas d’agression homophobe... et pour qu’il épargne à ses camarades les commentaires absurdes du genre « qui fait l’homme » (sans parler de proposer ses services). Votre enfant n’est pas forcément bisexuel, queer ou fétichiste du camembert. Mais vous ne l’élevez pas sous cloche. Ces problèmes le concernent quand même.
+
+
+Les questions cruciales du consentement et des violences
+
+8. ''Vos conversations doivent prendre en compte les questions cruciales que sont le consentement et les violences en sexualité. Ce qui commence par l’interrogation des rapports de pouvoir à l’œuvre, comme l’âge des partenaires, leur expérience, leur classe sociale, la pression des pairs ou les standards de genre. Vous ne préservez pas l’innocence de votre ado en prétendant que son initiation s’opérera dans une situation d’égalité parfaite : vous vous décrédibilisez (« les adultes ne comprennent rien »).''
+
+''Comme le notent les chercheurs Yaëlle Amsellem-Mainguy et Arthur Vuattoux dans une récente publication spécialisée*, le consentement devrait être abordé « à la fois dans sa dimension individuelle et intime (négociation de soi à soi, selon ce qu’on est prêt à faire ou non), dans sa dimension contractuelle (négociation avec son/sa partenaire, avec tous les enjeux autour du (ré)ajustement des désirs), et enfin dans sa dimension collective (normes admises dans leur génération, pression à accepter telle ou telle pratique) ».''
+
+9. ''Sortez aussi d’une vision binaire du consentement : selon ces mêmes chercheurs, les rapports sexuels peuvent être « souhaités (à l’initiative d’ego), acceptés (sur proposition du/de la partenaire), cédés après insistance ou pression sociale (« pour faire plaisir », « pour ne pas s’embrouiller », « c’est normal »), influencés (notamment par des produits psychoactifs), forcés (les « vrais viols ») ». Rappelez que l’amour n’est pas incompatible avec les rapports contraints ou non désirés. Malheureusement.''
+
+10. ''La manière dont vous conversez avec votre ado est aussi importante que le contenu de vos conversations. Si vous parlez de manière naturelle et détendue, alors vous transmettez émotionnellement, intuitivement, l’idée que la sexualité puisse être naturelle et détendue. La plupart d’entre nous n’ont pas eu cette chance.''
+
+Enfin, mais cela va sans dire : c’est une conversation, pas un cours magistral. Ecoutez, sans a priori, sans condescendance. Sans doute aurez-vous la surprise de découvrir que votre ado a des choses à vous apprendre. Et la joie de vous coucher, vous-même, moins bête ce soir.</pre>
 </div>
 <div created="20190605105424593" modified="20190605105547784" tags="zététique vaccin" title="Vaccins : zéro d’enquête sur France 3">
 <pre>Vaccins : zéro d’enquête sur France 3
