--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -285,6 +285,8 @@ Error message and password prompt
 
 <li>Home</li>
 
+<li>Hypnomachie</li>
+
 <li>Hypnomachie &amp; pedo</li>
 
 <li>ideas</li>
@@ -9346,7 +9348,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190918154309282" list="[[Quotes, citations]] Home" modified="20190918154309282" title="$:/StoryList">
+<div created="20190927134125134" list="Hypnomachie Home" modified="20190927134425071" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9406,8 +9408,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190918154308105" title="$:/temp/search">
-<pre>quote</pre>
+<div created="20190114084246125" modified="20190927134419135" title="$:/temp/search">
+<pre>hypno</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9632,8 +9634,13 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20190903134705329" tags="epub download" title="Books / livres">
-<pre>! JM Corda
+<div created="20190131165226977" modified="20190927135414194" tags="epub download" title="Books / livres">
+<pre>! Hypnomachie
+* ''Daniel Kahneman - Thinking, Fast and Slow - Système 1 / Système 2 : Les deux vitesses de la pensée''
+* ''Laszlo Mero - les aléas de la raison - The Fortunes of Reason''
+* ''Paolo Cioni - Neuro-esclaves''
+* Sebastien Villalba (aka Bascar Hypnomachie) - La perversion narcissique, mythes et réalité
+! JM Corda
 * ''Utoya - Laurent Obertone''
 * ''Dotcom Secrets - Russell Brunson''
 * ''Petit traité de manipulation à l'usage des honnêtes gens - Robert-Vincent Joule et Jean-Léon Beauvois''
@@ -10708,6 +10715,21 @@ Tyler1987
 
 </pre>
 </div>
+<div created="20190927134431065" modified="20190927135446600" tags="fiche_lecture" title="Hypnomachie">
+<pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
+
+trans-rationnel = on garde la méthode scientifique, et on cherche à accepter rationnellement l'irrationnel
+	=&gt; croyance + empirisme + intuition + démarche scientifique + émotions
+
+! read comments :
+* https://www.youtube.com/watch?v=80NXbZg9Q9s
+* https://www.youtube.com/watch?v=6wV5gsNg9EY
+* https://www.youtube.com/watch?v=LcT1XIrklhQ
+* https://www.youtube.com/watch?v=HERuMx-nlvw
+
+! https://www.youtube.com/watch?v=LRAXi3avGlI	28) Vers une épistémologie non dualiste : qu'est ce que l'on perd quand on gagne un débat
+</pre>
+</div>
 <div created="20190830154756419" modified="20190830154831001" tags="pedo fiche_lecture" title="Hypnomachie &amp; pedo">
 <pre>&lt;&lt;&lt;
 Je ne suis pas sûr que ce soit à quiconque d'autre que nous memes de nous protéger.
@@ -11555,7 +11577,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * World's Greatest Magic 1-4
 * James Randi Secret of The Psychics</pre>
 </div>
-<div created="20190130144059269" modified="20190826155458575" tags="pw" title="pw">
+<div created="20190130144059269" modified="20190925154842297" tags="pw" title="pw">
 <pre>```
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 aliexpress =&gt; ali.s.lx.n 6/19
@@ -11605,6 +11627,7 @@ ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 epicgames =&gt; epicgames.osef.osef@xoxy.net 7/19
 kickstarter =&gt; veiel.osef.osef@xoxy.net 8/19
 fnac =&gt; fnac.s.lemoine@xoxy.net 8/18
+ecoledirecte.com =&gt; sjlemoine 9/18
 ```
 </pre>
 </div>
@@ -11623,8 +11646,18 @@ fnac =&gt; fnac.s.lemoine@xoxy.net 8/18
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
 * virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
 </div>
-<div created="20190529145620246" modified="20190919130939785" tags="quotes" title="Quotes, citations">
+<div created="20190529145620246" modified="20190927134316268" tags="quotes" title="Quotes, citations">
 <pre>
+&lt;&lt;&lt;
+Rasoir d'Okam = choix de l'hypothèse ayant le moins d'éléments non-démontrés - Bascar Hypnomachie
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+Dieu est une sphère dont le centre est partout et la circonférence nulle part - St Augustin
+&lt;&lt;&lt;
+
+
 &lt;&lt;&lt;
 You don't have a soul, you're a soul. You have a body.
 &lt;&lt;&lt;
