--- a/TiddlyWiki.html
+++ b/TiddlyWiki.html
@@ -243,6 +243,8 @@ Error message and password prompt
 
 <li>CSS</li>
 
+<li>Cumberlandisme</li>
+
 <li>Delavier &amp; spiritualité</li>
 
 <li>dés</li>
@@ -9348,7 +9350,7 @@ Error message and password prompt
 <div created="20190108101211875" modified="20190521145518441" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/More</pre>
 </div>
-<div created="20190927134125134" list="Hypnomachie Home" modified="20190927134425071" title="$:/StoryList">
+<div created="20191119093217495" list="Hypnomachie Home" modified="20191122163928043" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20190131165140039" modified="20190131165140039" title="$:/temp/advancedsearch">
@@ -9408,8 +9410,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20190114084246125" modified="20190927134419135" title="$:/temp/search">
-<pre>hypno</pre>
+<div created="20190114084246125" modified="20191122163923217" title="$:/temp/search">
+<pre>hypn</pre>
 </div>
 <div created="20190108084849123" modified="20190108084857507" title="$:/theme">
 <pre>$:/themes/tiddlywiki/snowwhite</pre>
@@ -9634,8 +9636,16 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Jean-Samuel Pallard
 </pre>
 </div>
-<div created="20190131165226977" modified="20190927135414194" tags="epub download" title="Books / livres">
-<pre>! Hypnomachie
+<div created="20190131165226977" modified="20191018121828245" tags="epub download" title="Books / livres">
+<pre>! Jovanovic
+* ''Howard Bloom - Le Principe De Lucifer''
+! ''Pedocomplotisme''
+* Douglas De Coninck - 30 témoins morts
+* Anthony F. C. Wallace - Religion: an anthropological view
+* Mircea Eliade - Le chamanisme et les techniques archaïques de l'extase
+! Horizon Gull
+* Richard M. Ryan - Self-determination theory: Basic psychological needs in motivation, development, and wellness
+! Hypnomachie
 * ''Daniel Kahneman - Thinking, Fast and Slow - Système 1 / Système 2 : Les deux vitesses de la pensée''
 * ''Laszlo Mero - les aléas de la raison - The Fortunes of Reason''
 * ''Paolo Cioni - Neuro-esclaves''
@@ -9778,7 +9788,27 @@ Toutefois, il concède que «la démocratie, c’est donc la voix du peuple». A
 * Bourvois
 * Salvini
 * ''Nicolas Guéguen - Psychologie de la soumission et de la manipulation''
-
+! Le Mock
+* ''Belle du Seigneur, Albert Cohen''
+* ~~Lolita, Vladimir Nabokov~~
+* L'Automne du patriarche, Gabriel Garcia Marquez
+* ''La Vie devant soi, Emile Ajar''
+* ''Andromaque, Jean Racine''
+* Du Monde entier, Blaise Cendrars
+* ~~L'Étranger, Albert Camus~~
+* Une Femme à Berlin, Martha Hillers (anonyme)
+* La Fortune des Rougon, Émile Zola
+* ''La Modification, Michel Butor''
+* ''Fictions, Jose Luis Borges''
+* ''Le Montage, Vladimir Volkoff''
+* Les Fleurs du mal, Charles Baudelaire
+* Job -&gt; ''René Girard La route antique des hommes pervers''
+* Bel-ami, Guy de Maupassant
+* Le Monde d'hier, Stefan Zweig
+* Le Grand Meaulnes, Alain-Fournier
+* Léon Morin, prêtre, Béatrix Beck
+* La Nuit remue, Henri Michaux
+* L'Établi, Robert Linhart
 </pre>
 </div>
 <div created="20190628132124703" modified="20190628132202842" tags="fiche_lecture" title="Buddha lessons">
@@ -10081,6 +10111,81 @@ Sortir de son corps, un phénomène objectivable (OBE)
 ! other
 * CSS cheatsheet : https://frontend30.com/css-selectors-cheatsheet/
 * CSS NES-theme : https://nostalgic-css.github.io/NES.css/</pre>
+</div>
+<div created="20191121141819177" modified="20191122112209915" tags="magic mentalism" title="Cumberlandisme">
+<pre>! https://virtualmagie.com/forum/topic/3064-technique-le-cumberlandisme/
+* Le jeu avec le subconscient ou la lecture de pensée par contact musculaire de Dondo Burghardo (traduit par Roberto Giobbi) chez Magix
+* dans le deuxième &quot;step&quot; de Corinda, on trouve 4 pages (50 à 54) à propos du muscle reading
+* Psychophysiological Thought Reading (or Muscle Reading and The Ideomotor Response Revealed) de Banachek, un ouvrage entièrement sur le sujet
+* How to Read people's Minds (or The Mystery of Mind Reading Revealed) de H.J. Burlingame
+* le troisième DVD des PSI series de Banachek (encore lui !) est presque entièrement consacré à ce sujet
+
+
+! http://thechafa.overblog.com/retrouvez-des-objets-caches-grace-au-muscle-reading-et-au-cumberlandisme
+
+Aujourd’hui, nous allons découvrir le Cumberlandisme. Autrement dit : l’art de retrouver un objet caché dans une pièce seulement grâce à la pensée. N’avez-vous jamais rêvé de jouer les médiums ?
+
+L’idée est simple : vous demandez à un ami de cacher un objet quelconque dans la pièce où vous vous trouvez. En sa présence mais sans lui parler, vous allez essayer de retrouver l’objet.
+
+Le Cumberlandisme est en fait une simulation de lecture dans les pensées à travers le toucher ; plus précisément en lisant « à travers » les muscles (on parle de « muscle reading »).
+
+Evidemment, le sujet (votre ami) doit être un minimum suggestible parce qu’il doit, en quelque sorte, nous dire mentalement où il a caché l’objet. En fait, les bonnes techniques de Cumberlandisme provoqueront chez lui certains gestes lorsque vous irez en direction de l’objet caché (des gestes de retenues).
+
+Avant de commencer l’expérience avec votre sujet, vous devez lui dire quelque chose comme : « Tu vas visionner mentalement l’endroit où tu as caché l’objet. Une fois que c’est fait, transmet cette information vers mon esprit et crie-le, crie-le très fort dans ta tête. »
+
+Le but est de bien faire visualiser mentalement l’objet caché à votre sujet. Si vous zappez cette étape, il n’aura aucune retenue lorsque vous vous approcherez de l’objet en question… et votre expérience sera un cuisant échec !
+
+Une fois l’étape préliminaire terminée, tenez la personne comme dans cette vidéo (elle est tirée de la série « The Mentalist ») http://www.youtube.com/watch?v=5dUbyfQLrqc Tenez-lui le poignet droit au niveau du pouls puis posez votre autre main au niveau de son coude.
+
+Maintenant que tout est prêt vous pouvez commencer la lecture musculaire en vous baladant dans la pièce. Focalisez-vous sur son bras et sur sa main, mais n’oubliez pas d’observer aussi son visage pour déceler la moindre micro-expression.
+
+Si vous sentez une micro-retenue chez le sujet, c’est-à-dire qu’il lutte inconsciemment au lieu de suivre votre direction, c’est que vous êtes sur la bonne voie. A ce moment-là, tirez le bras avec lequel vous tenez le poignet et vous verrez d’autres micro-gestes de retenue au niveau de sa main. Avancez dans cette direction et vous observerez que ces micro-gestes seront de plus en plus fréquents !
+
+Si vous n’en observez plus, changez un petit peu de direction jusqu’à ce que les gestes de « lutte inconsciente » réapparaissent… et continuez ainsi jusqu’à arriver à l’objet.
+
+En théorie, cela paraît plutôt simple mais en pratique, ça ne l’est pas du tout.
+
+Message de Félix : Entrainez-vous avez des amis ou de la famille pour commencer. Les gens à qui vous le proposerez seront ravis de participer à cette petite expérience ludique ! Pour l’avoir essayé, ça marche ! Pas à tous les coups, mais au pire des cas, vous rigolerez bien. Avec de l’entrainement, je suis sûr que l’on peut réussir très souvent. Merci encore Jordan !
+
+
+! https://webcache.googleusercontent.com/search?q=cache:ViYoTjUxmgMJ:https://www.never-be-lied.com/divers/qu-est-ce-que-le-cumberlandisme+&amp;cd=1&amp;hl=fr&amp;ct=clnk&amp;gl=fr&amp;client=firefox-b-d
+
+Le cumberlandisme peut être rapproché de la lecture de pensée par contact ou bien de la voyance avec contact (contact mind-reading). Cette technique sert à simuler la télépathie.
+Comment fonctionne le cumberlandisme ?
+
+Le cumberlandisme utilise la technique de « muscle-reading » ou en français « lecture musculaire ». Cette technique consiste à lire chaque micro-mouvement d’une personne grâce à un simple contact musculaire (main, bras, etc.) et les interpréter pour des applications orientées principalement vers le spectacle, comme trouver un objet caché par un spectateur sans avoir besoin de l’aide d’un complice.
+
+La technique du cumberlandisme demande cependant beaucoup de travail et de concentration. En utilisant le cumberlandisme vous serez même capable de dessiner ce que pense une personne rien qu’avec un simple contact physique.
+
+Pour se faire, aucun échange verbal n’est nécessaire, seulement du muscle-reading avec une bonne préparation du « sujet » utilisé. En effet, pour que l’effet marche, vous devrez préparer le « sujet » à cette lecture musculaire en lui indiquant précisément la marche à suivre pour le bon fonctionnement de la séance.
+Exemple de cumberlandisme et exercice
+
+Nous allons commencer par vous donner un exemple concret d’une séance de cumberlandisme, puis, vous donner un exercice que vous pourrez faire pour vous entraîner.
+Exemple de cumberlandisme
+
+Vous êtes dans une pièce avec des amis, il y a un moment de vide ou personne ne parle, vous voulez faire quelque chose pour occuper voir lancer des débats. Ça tombe bien, vous avez justement de quoi faire parler. Vous demandez à une personne de cacher un objet, quel qu’il soit pendant que vous serez ailleurs pour ne pas regarder. Une fois l’objet caché, vous revenez dans la pièce, vous lui expliquez que pour trouver l’objet qui a été caché vous avez besoin de son aide mentale. Vous expliquez alors que vous allez déplacer votre main tout autour de la pièce pour trouver l’objet qui a été caché. Pour le trouver vous avez simplement besoin que cette personne pense à « droite, gauche, haut, bas » pour vous guider mentalement vers cet objet. Il n’y a pas besoin de la parole, seulement de la pensée ! Après quelques secondes vous avez retrouvé l’objet sans avoir besoin de complice, sans avoir besoin que quelqu’un parle.
+Exercice de cumberlandisme
+
+Après avoir vu un exemple de ce dont il est possible de faire grâce au cumberlandisme, nous passons à la pratique. Pour pratiquer, vous avez besoin d’une personne ainsi que d’un objet.
+Le cumberlandisme
+
+Prenez un briquet, une pièce, ou un objet quelconque, vous pouvez choisir délibérément un objet de grande taille pour limiter les possibilités de le cacher, de cette façon vous trouverez plus facilement en commençant petit à petit à vous familiariser avec la technique. Une fois que vous arriverez à trouver de gros objets, vous pouvez faire l’exercice avec de plus petits objets. Pour cet exercice, nous allons prendre comme exemple une balle de tennis. Tendez la balle de tennis à votre ami en lui demandant de la cacher n’importe où dans la pièce pendant que vous serez ailleurs pour ne pas regarder. Une fois cet acte accompli, vous pouvez revenir et commencer l’expérience.
+
+Vous commencez par lui expliquer que pour trouver la balle de tennis vous avez besoin de son aide mentale, uniquement mentale, vous n’avez pas besoin qu’il parle. Ci-dessous un exemple de dialogue.
+
+Vous : Je vais maintenant trouver l’endroit où est cachée la balle de tennis, pour cela je vais avoir besoin de ton aide mentale, tu n’auras pas besoin de parler, je vais simplement te demander de penser. Je vais prendre ton bras et le diriger dans la pièce, j’ai besoin que tu me guides mentalement avec les instructions « gauche, droite, haut et bas », si l’objet que je recherche se trouve à ta gauche il te suffit de penser « à gauche », te concentrer dessus et visualiser où se situe l’objet, et m’y guider mentalement, uniquement avec ton esprit.
+
+Vous devez maintenant prendre le bras gauche de la personne avec votre main droite, placez vos doigts de façon à ressentir son pouls. Demandez-lui de se laisser porter, son bras ne doit pas être dur lorsque vous le déplacez, mais ne doit pas être tombant non plus. Vous allez maintenant poser le bout de ses doigts sur votre main gauche. De cette façon vous pourrez ressentir chaque micro-mouvement.
+
+Vous pouvez maintenant commencer à chercher la balle de tennis en suivant la méthode suivante :
+
+Déplacez d’abord son bras en effectuant un tour à 360° sur lui-même tout en lui rappelant que lorsque sa main arrive en direction de la balle de tennis, il doit penser fortement « STOP », si la balle se trouve à droite, il lui suffit de penser « droite » et pareil pour la gauche. Lorsque vous arriverez vers l’endroit où est cachée la balle grâce à cette ligne horizontale, vous devez bouger son bras de haut en bas tout en utilisant le même principe. Lorsque vous aurez senti ses micro-mouvements, vous n’aurez plus qu’à faire mentalement l’intersection entre ses deux lignes pour trouver l’objet.
+
+Cela peut prendre du temps et des heures d’entraînement, mais le résultat est bluffant !
+Apprendre le cumberlandisme
+
+Avec de l’entraînement, vous serez capable de dessiner ce que pense une personne rien qu’avec le contact de la main de celle-ci sur votre propre bras. Cela prend du temps, mais ce n’est pas irréalisable. N’oubliez pas que la clé du succès est le travail, donc un seul mot d’ordre : travail ! 
+Si vous travaillez suffisamment vous serez en mesure d’accomplir des choses jusqu’alors inimaginables pour vous. </pre>
 </div>
 <div created="20190529145458196" modified="20190830154142741" tags="spiritualité delavier" title="Delavier &amp; spiritualité">
 <pre>Delavier:
@@ -10715,11 +10820,23 @@ Tyler1987
 
 </pre>
 </div>
-<div created="20190927134431065" modified="20190927135446600" tags="fiche_lecture" title="Hypnomachie">
+<div created="20190927134431065" modified="20191122164010152" tags="fiche_lecture" title="Hypnomachie">
 <pre>pré-rationnel -&gt; rationnel -&gt; trans-rationnel
 
 trans-rationnel = on garde la méthode scientifique, et on cherche à accepter rationnellement l'irrationnel
 	=&gt; croyance + empirisme + intuition + démarche scientifique + émotions
+
+
+&lt;&lt;&lt;
+la notion de transrationalité n'est qu'un amuse gueule à vrai dire
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+C'est que dans l'absolu je ne promeut rien.
+Simplement, pour ne rien promouvoir, il peut être pertinent de promouvoir à un moment T et à l'attention de certaines personnes seulement (c'est pour cela qu'on ne peut pas aller loin par internet, cela empêche la personnalisation, ceux qui ont fait de l'hypnomachie IRL savent de quoi je parles).
+&lt;&lt;&lt;
+
 
 ! read comments :
 * https://www.youtube.com/watch?v=80NXbZg9Q9s
@@ -10954,7 +11071,7 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 * http://adrastia.org/
 * https://www.youtube.com/channel/UCprmhr8rfvlFpuSmv-QOEgA/videos</pre>
 </div>
-<div created="20190322143324937" modified="20190916142355760" tags="magic current" title="magic">
+<div created="20190322143324937" modified="20191119164356866" tags="magic current" title="magic">
 <pre>! work: 
 * squeeze @4'50 - 5'28 https://www.youtube.com/watch?v=gmo5aJNBFEM
 * himber count
@@ -10966,10 +11083,14 @@ I don't know if it's the same as Kaufman's Edge Clip. I looked through his book,
 ! warez
 * ''http://www.magic22.com/''
 * https://vminhsang.name.vn/?p=1108
-* ''https://vminhsang.name.vn/?p=3518''
-* ''https://vminhsang.name.vn/?p=3487''
-* ''https://vminhsang.name.vn/?p=3491''
-* ''https://vminhsang.name.vn/?p=3499''
+* https://vminhsang.name.vn/?p=3518 1
+* https://vminhsang.name.vn/?p=3487 2
+* https://vminhsang.name.vn/?p=3491 3
+* https://vminhsang.name.vn/?p=3499 4
+* ''https://vminhsang.name.vn/?p=3952'' 5
+* ''https://vminhsang.name.vn/?p=4556'' 6
+* ''https://vminhsang.name.vn/?p=5026'' 7
+*'' https://vminhsang.name.vn/?p=5444'' 8
 * ''http://freemagicdownload1807.blogspot.com/''
 * ''https://www.reddit.com/r/Premium2FreeDownload/''
 * https://www.dailymotion.com/j1811178/videos?sort=visited
@@ -11577,7 +11698,7 @@ Lucie Aubrac, Raymond Aubrac, Henri Bartoli, Daniel Cordier, Philippe Dechartre,
 * World's Greatest Magic 1-4
 * James Randi Secret of The Psychics</pre>
 </div>
-<div created="20190130144059269" modified="20190925154842297" tags="pw" title="pw">
+<div created="20190130144059269" modified="20191015103009026" tags="pw" title="pw">
 <pre>```
 youtube =&gt; osef@grr.la	5/19    cf https://www.guerrillamail.com/fr/inbox?mail_id=476361683
 aliexpress =&gt; ali.s.lx.n 6/19
@@ -11626,12 +11747,14 @@ https://ceausy.kadeosconnect.com/avantage/       kadeos.s.lemoine@xoxy.net 12/18
 ausyce.fr (&quot;BetweenUs&quot;)	s.l@ycom	l*****m
 epicgames =&gt; epicgames.osef.osef@xoxy.net 7/19
 kickstarter =&gt; veiel.osef.osef@xoxy.net 8/19
-fnac =&gt; fnac.s.lemoine@xoxy.net 8/18
-ecoledirecte.com =&gt; sjlemoine 9/18
+fnac =&gt; fnac.s.lemoine@xoxy.net 8/19
+ecoledirecte.com =&gt; sjlemoine 9/19
+mondebio =&gt; mondebio.s.lemoine@xoxy.net 9/19
+cgb.fr =&gt; s.l@y.c 10/19
 ```
 </pre>
 </div>
-<div created="20190212082532922" modified="20190626125052793" tags="dev" title="Python" type="">
+<div created="20190212082532922" modified="20191107135317464" tags="dev" title="Python" type="">
 <pre>* tuto : https://docs.python.org/3.6/tutorial/controlflow.html
 
 * quick &amp; dirty Python programs : https://sebsauvage.net/python/programs.html
@@ -11644,10 +11767,21 @@ ecoledirecte.com =&gt; sjlemoine 9/18
 * different installers : https://stevedower.id.au/blog/why-so-many-python-installers/
 
 * packaging executable : https://gregoryszorc.com/blog/2019/06/24/building-standalone-python-applications-with-pyoxidizer/
-* virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/</pre>
+* virtualenv : http://sametmax.com/les-environnement-virtuels-python-virtualenv-et-virtualenvwrapper/
+
+* https://perso.limsi.fr/pointal/python:accueil</pre>
 </div>
-<div created="20190529145620246" modified="20190927134316268" tags="quotes" title="Quotes, citations">
-<pre>
+<div created="20190529145620246" modified="20191001091721993" tags="quotes" title="Quotes, citations">
+<pre>&lt;&lt;&lt;
+L'Homme n'a pas de racines, il a des pieds - Salman Rushdie
+&lt;&lt;&lt;
+
+
+&lt;&lt;&lt;
+On greffe de tout aujourd'hui, des reins, des bras, un coeur. Sauf les couilles. Par manque de donneur. - Jacques Chirac
+&lt;&lt;&lt;
+
+
 &lt;&lt;&lt;
 Rasoir d'Okam = choix de l'hypothèse ayant le moins d'éléments non-démontrés - Bascar Hypnomachie
 &lt;&lt;&lt;
@@ -11765,7 +11899,7 @@ There are no limits. There are plateaus, but you must not stay there, you must g
 
 
 &lt;&lt;&lt;
-I have just three things to teach: simplicity, patience, compassion. These three are your greatest treasures
+''I have just three things to teach: simplicity, patience, compassion. These three are your greatest treasures''
 &lt;&lt;&lt;
 
 
@@ -12253,15 +12387,18 @@ Si ''information == !entropie'', et compte-tenu du caractère subjectif de l'ent
 * entropie, entropie de Shannon, information
 * théorie du chaos</pre>
 </div>
-<div created="20190130144237309" modified="20190301162949822" tags="" title="Todo">
-<pre>* renouvellement vignette NGE : jusqu'au 31 mars 2019 https://mon.nge-nantes.fr/espace/stationnement
-* inscription école Emma http://www.education.gouv.fr/cid161/l-inscription-a-l-ecole-maternelle.html
-* baptème Emma
-* préparation vacances Verino
+<div created="20190130144237309" modified="20191016123416224" tags="" title="Todo">
+<pre>* renouvellement vignette NGE : jusqu'au 31 mars 2020 https://mon.nge-nantes.fr/espace/stationnement
+* préparation Verino janvier/février ?
 
 * recherche appart'/maison
-* utilisation formation continue CPF
+* utilisation formation continue CPF &gt; Permaculture ?
 
+! Card Magic :
+* gambler's cop
+* tenkai palm
+* diagonal palm shift / squeeze shift
+* bottom deal / greek deal
 
 ```
 https://fr.wikipedia.org/wiki/Lambda-calcul
@@ -12274,7 +12411,6 @@ https://orientxxi.info/fr/video
 	4	https://www.youtube.com/watch?v=KjoPoUukWA0
 
 
-Ligue du LOL	https://fr.wikipedia.org/wiki/Ligue_du_LOL
 Michel Clouscard
 Pierre Kropotkine
 ```
